--- a/package.json
+++ b/package.json
@@ -5,34 +5,43 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
+    "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "install": "^0.13.0",
     "katex": "^0.16.21",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-katex": "^3.0.1",
     "react-router": "^7.1.5",
     "react-transition-group": "^4.4.5",
     "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "throttle-debounce": "^5.0.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
